# orange-hrm-playwright

./: .gitignore  README.md  pyproject.toml
.github/workflows/: playwright.yml  test.yml
data/: candidate.py  employee.py  vacancy.py
pages/: add_employee_page.py  login_page.py  pim_page.py  recruitment_page.py
pages/pim/: add_employee_page.py  employee_list_page.py
pages/recruitment/: candidate_page.py  vacancy_page.py
tests/: api_fixtures.py  conftest.py
tests/e2e/: test_add_candidate.py  test_add_employee.py  test_example.py  test_search_employee.py  test_vacancy.py
utils/: config.py  data_generator.py  decorators.py
